--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,4 +1,6 @@
 // @require './code-theme'
-// $rightMenuWidth = 200px
+  // $homePageWidth = 1200px
+$rightMenuWidth = 300px
+$contentWidth = 960px
 // .theme-mode-light.theme-mode-light
 //   codeThemeLight()
