--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -13,4 +13,4 @@
 
 //   background-color: transparent !important
 // }
-@require '~vuepress-plugin-tabs/dist/themes/default.styl'
+// @require '~vuepress-plugin-tabs/dist/themes/default.styl'
